--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,33 @@
+amqp==2.2.1
+billiard==3.5.0.3
+celery==4.0.2
+certifi==2017.4.17
+chardet==3.0.4
 dj-database-url==0.4.1
 Django==1.11.1
+django-celery-beat==1.0.1
+django-celery-results==1.0.1
+djangorestframework==3.6.3
+djangorestframework-jwt==1.11.0
+google-api-python-client==1.6.2
 gunicorn==19.6.0
+httplib2==0.10.3
+idna==2.5
+kombu==4.1.0
+langdetect==1.0.7
+Markdown==2.6.8
+nltk==3.2.4
+oauth2client==4.1.2
 psycopg2==2.6.2
+pyasn1==0.2.3
+pyasn1-modules==0.0.9
+PyJWT==1.5.2
+pytz==2017.2
+redis==2.10.5
+requests==2.18.1
+rsa==3.4.2
+six==1.10.0
+uritemplate==3.0.0
+urllib3==1.21.1
+vine==1.1.4
 whitenoise==3.2
