--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ psycopg2==2.6.2
 pyasn1==0.2.3
 pyasn1-modules==0.0.9
 PyJWT==1.5.2
+python-dateutil==2.6.1
 pytz==2017.2
 redis==2.10.5
 requests==2.18.1
