--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,15 @@ billiard==3.5.0.3
 celery==4.0.2
 certifi==2017.4.17
 chardet==3.0.4
+defusedxml==0.5.0
 dj-database-url==0.4.1
 Django==1.11.1
+django-braces==1.11.0
 django-celery-beat==1.0.1
 django-celery-results==1.0.1
 django-cors-headers==2.1.0
+django-oauth-toolkit==1.0.0
+django-rest-framework-social-oauth2==1.0.8
 djangorestframework==3.6.3
 djangorestframework-jwt==1.11.0
 google-api-python-client==1.6.2
@@ -19,16 +23,21 @@ langdetect==1.0.7
 Markdown==2.6.8
 nltk==3.2.4
 oauth2client==4.1.2
+oauthlib==2.0.2
 psycopg2==2.6.2
 pyasn1==0.2.3
 pyasn1-modules==0.0.9
 PyJWT==1.5.2
 python-dateutil==2.6.1
+python3-openid==3.1.0
 pytz==2017.2
 redis==2.10.5
 requests==2.18.1
+requests-oauthlib==0.8.0
 rsa==3.4.2
 six==1.10.0
+social-auth-app-django==1.2.0
+social-auth-core==1.4.0
 uritemplate==3.0.0
 urllib3==1.21.1
 vine==1.1.4
