--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-braces==1.11.0
 django-celery-beat==1.0.1
 django-celery-results==1.0.1
 django-cors-headers==2.1.0
+django-filter==1.0.4
 django-oauth-toolkit==1.0.0
 django-rest-framework-social-oauth2==1.0.8
 djangorestframework==3.6.3
