--- a/requirements.txt
+++ b/requirements.txt
@@ -20,9 +20,10 @@ gunicorn==19.6.0
 httplib2==0.10.3
 idna==2.5
 kombu==4.1.0
-langdetect==1.0.7
+langid==1.1.6
 Markdown==2.6.8
 nltk==3.2.4
+numpy==1.13.1
 oauth2client==4.1.2
 oauthlib==2.0.2
 psycopg2==2.6.2
