--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 amqp==2.2.1
+asn1crypto==0.22.0
 billiard==3.5.0.3
 celery==4.0.2
 certifi==2017.4.17
+cffi==1.10.0
 chardet==3.0.4
+cryptography==2.0.2
 defusedxml==0.5.0
 dj-database-url==0.4.1
 Django==1.11.1
@@ -19,6 +22,7 @@ google-api-python-client==1.6.2
 gunicorn==19.6.0
 httplib2==0.10.3
 idna==2.5
+ingredient-phrase-tagger==0.0.0.dev0
 kombu==4.1.0
 langid==1.1.6
 Markdown==2.6.8
@@ -29,6 +33,7 @@ oauthlib==2.0.2
 psycopg2==2.6.2
 pyasn1==0.2.3
 pyasn1-modules==0.0.9
+pycparser==2.18
 PyJWT==1.5.2
 python-dateutil==2.6.1
 python3-openid==3.1.0
@@ -36,6 +41,7 @@ pytz==2017.2
 redis==2.10.5
 requests==2.18.1
 requests-oauthlib==0.8.0
+rest-framework-auth0==0.4.5
 rsa==3.4.2
 six==1.10.0
 social-auth-app-django==1.2.0
