Setup django stuff

--- a/Pipfile
+++ b/Pipfile
@@ -12,7 +12,7 @@ celery = "==4.0.2"
 certifi = "==2017.4.17"
 cffi = "==1.10.0"
 chardet = "==3.0.4"
-cryptography = "==2.0.2"
+cryptography = "*"
 defusedxml = "==0.5.0"
 dj-database-url = "==0.4.1"
 django-braces = "==1.11.0"
@@ -29,7 +29,7 @@ idna = "==2.5"
 kombu = "==4.1.0"
 langid = "==1.1.6"
 nltk = "==3.2.4"
-numpy = "==1.13.1"
+numpy = "*"
 "oauth2client" = "==4.1.2"
 oauthlib = "==2.0.2"
 "psycopg2" = "==2.7.4"
@@ -53,11 +53,12 @@ whitenoise = "==3.2"
 Django = "==2.0.3"
 django_celery_beat = "==1.1.1"
 django_celery_results = "==1.0.1"
+Markdown = "==2.6.8"
 PyJWT = "==1.5.2"
 "rest_framework_auth0" = "==0.4.5"
-Markdown = "==2.6.8"
+django-heroku = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.7"
+python_version = "3.6"
