--- a/.gitignore
+++ b/.gitignore
@@ -209,7 +209,7 @@ bh_unicode_properties.cache
 # https://packagecontrol.io/packages/sublime-github
 GitHub.sublime-settings
 
-/tipsyapp/static/ang/*
+tipsyapp/static/ang/*
 
 
 
