--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --prod --output-path ./tipsyapp/static/ang/ --output-hashing none"
+    "postinstall": "ng build --output-path ./tipsyapp/static/ang/"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.9",
     "@angular/cdk": "^5.2.4",
-    "@angular/cli": "^1.7.3",
+    "@angular/cli": "^7.7.3",
     "@angular/common": "^5.2.9",
     "@angular/compiler": "^5.2.9",
     "@angular/core": "^5.2.9",
@@ -45,9 +45,11 @@
     "ngx-order-pipe": "^1.0.2",
     "path": "^0.12.7",
     "rxjs": "^5.5.2",
+    "tslib": "^1.9.0",
     "zone.js": "^0.8.16"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.13.0",
     "@angular/compiler-cli": "^5.2.9",
     "@angular/language-service": "^4.3.2",
     "@types/jasmine": "~2.5.53",
@@ -59,7 +61,7 @@
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-coverage-istanbul-reporter": "^2.0.4",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
