Build prod Disable hasing and build prod

--- a/angular.json
+++ b/angular.json
@@ -132,5 +132,10 @@
     "@schematics/angular:directive": {
       "prefix": "app"
     }
+  },
+  "cli": {
+    "warnings": {
+      "typescriptMismatch": false
+    }
   }
 }
